# NMM

./: README.md  setup.cfg
src/: main.py
src/classes/: Board.py  Game.py  __init__.py
src/classes/_events/: Event.py  Move.py  Place.py  Remove.py
src/classes/_players/: Computer.py  Human.py  Player.py
src/classes/events/: __init__.py
src/classes/players/: __init__.py
src/utils/: LogManager.py  __init__.py  colourText.py  getInput.py
