[metadata]
name = Nine Man's Morris
description = Implementation of the Nine Man's Morris classic game
author = Samir Gupta
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    classes
    utils
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[flake8]
max-line-length = 160
